[package]
name = "alloy-unit-macros-impl"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/makcandrov/alloy-unit-macros"
license = "MIT OR Apache-2.0"
keywords = ["alloy", "unit", "macros"]

[dependencies]
alloy-primitives.workspace = true
proc-macro2 = "1"
quote = "1"
syn = "2"

[lib]
proc-macro = true
